--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div id="score-board">Score: 0</div>
     <div id="timer">Time Left: 30s</div>
     <!-- Start Game button -->
-    <button id="startButton">Start Game</button>
+    <button onclick="startGame()" id="startButton">Start Game</button>
     <!-- Game grid containing holes and moles -->
     <div class="grid">
         <div class="hole" id="hole1">
@@ -96,6 +96,8 @@
     </div>
 
     <script>
+        let score = 0;
+        let time = 30000;
         // Set up local variables
         // Hint: Declare variables for score, currentHole, gameTimer, timeLeft, moleVisible, etc.
 
@@ -107,6 +109,11 @@
 
         // TODO: start game logic
         function startGame() {
+            randomHole();
+            score = 0;
+            time = 30000;
+            gameTimer = setInterval(randomHole, 1000);
+            let holeID = "";
             // Algorithm:
             // 1. Reset game variables: score starts at 0, timer starts at max, mole visibility, etc.          
             // 2. Update JS variables and HTML elements to reflect this.            
@@ -117,6 +124,10 @@
 
         // TODO: mole movement logic
         function randomHole() {
+            let holeNumber = Math.floor(Math.random() * 6) + 1;
+            holeID = "hole" + holeNumber;
+            let hole = document.getElementById(holeID).querySelector();
+            console.log(hole);
             // Algorithm:
             // 1. Hide the mole in the previous hole (if any).           
             // 2. Generate a random index to select a new hole. 
