--- a/index.html
+++ b/index.html
@@ -122,12 +122,23 @@
             // 4. Start the countdown timer using setInterval().            
         }
 
+        let hole;
+        let mole;
         // TODO: mole movement logic
         function randomHole() {
             let holeNumber = Math.floor(Math.random() * 6) + 1;
-            holeID = "hole" + holeNumber;
-            let hole = document.getElementById(holeID).querySelector();
-            console.log(hole);
+            holeID = "#hole" + holeNumber;
+            if(hole != null)
+                {
+                    
+                    mole.style.display = "none";
+                }
+            hole = document.querySelector(holeID);
+            mole = hole.querySelector(".mole");
+            
+            mole.style.display = "inline";
+            console.log(mole);
+
             // Algorithm:
             // 1. Hide the mole in the previous hole (if any).           
             // 2. Generate a random index to select a new hole. 
