--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             mole = hole.querySelector(".mole");
             
             mole.style.display = "inline";
-            console.log(mole);
+            //console.log(mole);
+
+            mole.addEventListener("click", whack());
 
             // Algorithm:
             // 1. Hide the mole in the previous hole (if any).           
@@ -149,6 +151,13 @@
 
         // TODO: whack mole game logic
         function whack() {
+
+        if(mole.style.display = "inline")
+        {
+            score++;
+            document.getElementById("score-board").innerHTML = "Score: " + score;
+            console.log(score);
+        }
             // Algorithm:
             // 0. if the mole is visible...
             // 1. Increase the score.           
